--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-OPENAI_API_KEY=
+OPENAI_API_KEY=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
+ASSISTANT_ID=asst_H8KV3Xdf0v7BjN0vA8nnMmB7
+
