--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Demo for CORE-IQ audience insights",
   "main": "index.html",
   "scripts": {
-    "test": "node budget.test.js",
+    "test": "node budget.test.js && node roi.test.js",
     "start": "node server.js"
   },
   "keywords": [],
